add job list api
