# docs/swagger.json
@@ -160,6 +160,61 @@
             }
         },
         "/api/v1/jobs": {
+            "get": {
+                "security": [
+                    {
+                        "Authorization": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Jobs"
+                ],
+                "summary": "List Jobs",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "name": "page",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": ""
+                    },
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/api_response.ResponseWithPagination"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/res.JobInListJobRes"
+                                            }
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            },
             "post": {
                 "security": [
                     {
@@ -202,7 +257,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/res.JobRes"
+                                            "$ref": "#/definitions/res.JobDetailsRes"
                                         }
                                     }
                                 }
@@ -262,6 +317,23 @@
         }
     },
     "definitions": {
+        "api_response.PaginationResponse": {
+            "type": "object",
+            "properties": {
+                "current_page": {
+                    "type": "integer"
+                },
+                "items_per_page": {
+                    "type": "integer"
+                },
+                "total_items": {
+                    "type": "integer"
+                },
+                "total_page": {
+                    "type": "integer"
+                }
+            }
+        },
         "api_response.Response": {
             "type": "object",
             "properties": {
@@ -280,6 +352,31 @@
                 },
                 "message": {
                     "type": "string"
+                }
+            }
+        },
+        "api_response.ResponseWithPagination": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "description": "This is Name",
+                    "type": "integer"
+                },
+                "data": {
+                    "type": "object"
+                },
+                "errors": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "message": {
+                    "type": "string"
+                },
+                "pagination": {
+                    "type": "object",
+                    "$ref": "#/definitions/api_response.PaginationResponse"
                 }
             }
         },
@@ -306,6 +403,17 @@
                 },
                 "title": {
                     "type": "string"
+                }
+            }
+        },
+        "req.JobListQuery": {
+            "type": "object",
+            "properties": {
+                "limit": {
+                    "type": "integer"
+                },
+                "page": {
+                    "type": "integer"
                 }
             }
         },
@@ -354,10 +462,13 @@
                 }
             }
         },
-        "res.JobRes": {
+        "res.JobDetailsRes": {
             "type": "object",
             "properties": {
                 "apply_to": {
+                    "type": "string"
+                },
+                "created_at": {
                     "type": "string"
                 },
                 "description": {
@@ -366,6 +477,12 @@
                 "id": {
                     "type": "integer"
                 },
+                "slug": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                },
                 "taxonomies": {
                     "type": "array",
                     "items": {
@@ -373,6 +490,32 @@
                     }
                 },
                 "title": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                }
+            }
+        },
+        "res.JobInListJobRes": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "slug": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "updated_at": {
                     "type": "string"
                 }
             }
