# pkg/api_response/api_response.go
@@ -2,12 +2,29 @@ package api_response
 
 import "strings"
 
+// swagger:parameters PaginationResponse
+type PaginationResponse struct {
+	TotalPage    int `json:"total_page"`
+	ItemsPerPage int `json:"items_per_page"`
+	CurrentPage  int `json:"current_page"`
+	TotalItems   int `json:"total_items"`
+}
+
 // swagger:parameters Response
 type Response struct {
 	Code    int         `json:"code"` // This is Name
 	Message string      `json:"message"`
 	Errors  []string    `json:"errors"`
 	Data    interface{} `json:"data"`
+}
+
+// swagger:parameters ResponseWithPagination
+type ResponseWithPagination struct {
+	Code       int                 `json:"code"` // This is Name
+	Message    string              `json:"message"`
+	Errors     []string            `json:"errors"`
+	Data       interface{}         `json:"data"`
+	Pagination *PaginationResponse `json:"pagination"`
 }
 type EmptyObj struct {
 }
@@ -19,6 +36,17 @@ func BuildResponse(code int, message string, data interface{}) Response {
 		Message: message,
 		Errors:  errors,
 		Data:    data,
+	}
+}
+
+func BuildResponseWithPagination(code int, message string, data interface{}, pagination *PaginationResponse) ResponseWithPagination {
+	var errors = make([]string, 0)
+	return ResponseWithPagination{
+		Code:       code,
+		Message:    message,
+		Errors:     errors,
+		Data:       data,
+		Pagination: pagination,
 	}
 }
 
